modify .super-search z-index to 6 to avoid duoshuo to flow out

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -281,7 +281,7 @@ MIT Licensed
     right: 0;
     top: 0;
     bottom: 0;
-    z-index: 1;
+    z-index: 6;
     transition: 0.2s ease;
     visibility: hidden;
     opacity: 0;
